--- a/src/main/resources/templates/board/articleForm.html
+++ b/src/main/resources/templates/board/articleForm.html
@@ -27,7 +27,7 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
   
   <div class="content">
     <h4 >게시글 쓰기</h4>
-    <form id="" name="" action="" method="post"  >
+    <form id="" name="" action="/board/addNewArticle.do" method="post"  >
         
         <table align="left">
             <tr>
@@ -41,7 +41,7 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
             <tr>
                 <td align="left"> </td>
                 <td colspan="2">
-                  <input type="button" value="초기화"  />
+                  <input type="reset" value="초기화"  />
                     <input type="submit" value="등록" />
                     
                 </td>
