--- a/src/main/resources/templates/sidebar/article.html
+++ b/src/main/resources/templates/sidebar/article.html
@@ -7,8 +7,8 @@
     <!--article-sidebar-->
     <div th:fragment="articleSidebar" class="sidebar">
         <ul class="sidebar-menu">
-            <a href="/article/listArticles.do">게시판</a>
-            <li><a href="../board/listArticles.html#동물">동물 게시판</a></li>
+            <a href="/board/listArticles.do">게시판</a>
+            <li><a href="./board/listArticles.do#동물">동물 게시판</a></li>
                 <ul>
                     <li><a href="#!">강아지</a></li>
                     <li><a href="#!">고양이</a></li>
