리스트 창 띄우기+DB값 띄우기

--- a/src/main/resources/templates/board/listArticles.html
+++ b/src/main/resources/templates/board/listArticles.html
@@ -42,15 +42,31 @@ layout:decorate="~{layout/defaultLayout}">
 </th:block>
 
 <body>
-  <!-- Content -->
+    <!-- Content -->
 <div layout:fragment="content" class="container">
   <!-- sidebar fragment 사용 -->
   <div th:replace="sidebar/article :: articleSidebar"></div>
   
-
   <div class="content">
-    <h1>동물 게시판</h1>
-      <table >
+    <select name="select" id="select">
+    <option value="제목" >제목</option>
+    <option value="등록자 아이디">등록자 아이디</option>
+    <option value="내용">내용</option>
+    <option value="제목/내용">제목/내용</option>
+    <option value="닉네임">닉네임</option>
+  </select>
+  <input type="text" name="searchInput" id="searchInput">
+  <button id="searchButton">검색</button>
+ 
+  
+<!-- 동물 -->
+<div class="animallist">
+  <a href="./articleForm.html">게시글 쓰기</a>
+  <div id="동물">
+  <h1>동물 게시판</h1>
+  <div class="boradlist-container">
+      <table class="boradlist">
+
          <tr>
             <th><b>번호</b></th>
             <th><b>제목</b></th>
@@ -82,6 +98,7 @@ layout:decorate="~{layout/defaultLayout}">
     </div>
     
    </div>
+</div>
 </div>
 <!-- 동물 끝 -->
 
