--- a/src/main/resources/templates/mypage/my-info-management.html
+++ b/src/main/resources/templates/mypage/my-info-management.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/defaultLayout}">
 <!-- 페이지의 제목 설정 -->
 <head>
-    <title>나의 정보 관리</title>
+    <title>계정 정보 관리</title>
 </head>
 
 <!-- 해당 페이지 고유 CSS 추가 -->
