--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -74,29 +74,27 @@
           };
           
 
-          // AJAX 로그인 post 요청 로직
+       	  // AJAX 로그인 post 요청 로직
           $(this).prop("disabled", true);  // 로그인 버튼 비활성화
           $.ajax({
-                url: "/api/login",
-                type: "POST",
-                contentType: "application/json",
-                data: JSON.stringify(formData),
-                success: function(response) {
-                  window.location.href = response.redirectUrl;
-                },
-                error: function(xhr, status, error) {
-                  if (xhr.status == 401) {  // HTTP 상태 코드 401: Unauthorized
-                        $("#loginError").text("아이디 또는 비밀번호가 잘못되었습니다.");
-                  } else if (xhr.status == 403) {  // HTTP 상태 코드 403: Forbidden
-                        var response = JSON.parse(xhr.responseText);
-                        $("#loginError").text(response.message);
+              url: "/api/login",
+              type: "POST",
+              contentType: "application/json",
+              data: JSON.stringify(formData),
+              success: function(response) {
+                  if(response.redirectUrl) {
+                      window.location.href = response.redirectUrl;
                   } else {
-                        $("#loginError").text("로그인 중 오류가 발생했습니다.");
+                      $("#loginError").text(response.message);
                   }
-                },
-                complete: function() {
+              },
+              error: function(xhr) {
+                  var response = JSON.parse(xhr.responseText);
+                  $("#loginError").text(response.message);
+              },
+              complete: function() {
                   $("#login_btn").prop("disabled", false);  // 로그인 버튼 활성화
-                }
+              }
           });
     	});
   	});
