--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -34,7 +34,7 @@
     <span class="blind">애니플랜트</span>
   </h1>
   <div class="content">
-    <form>
+    <form id="login_form" name="login_form" method="post" action="">
         <input type="text" id="loginID" name="username" placeholder="아이디"><span id="idError" class="error"></span><br>
         <input type="password" id="loginPWD" name="password" placeholder="비밀번호"><span id="pwdError" class="error"></span><br>
         <div id="captchaDiv"></div>
