--- a/src/main/resources/templates/layout/defaultLayout.html
+++ b/src/main/resources/templates/layout/defaultLayout.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1, user-scalable=yes,initial-scale=1.0" />
     <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">애니플랜트</title>
+    <link rel="stylesheet" th:href="@{/css/layout.css}"/>
+    <script th:src="@{/js/layout.js}"></script>
     <!-- content style -->
     <th:block layout:fragment="css"></th:block>
     <!-- content script -->
