--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -64,14 +64,54 @@ header {
 	border: none;
 	cursor: pointer;
 }
-.user_area {
+#user_area {
+	display: flex;           
+    flex-direction: row;
+    align-items: center;     
+    justify-content: center;
 	margin: 20px;
+	border: 1px solid #14b8a6;
+	border-radius: 15px;
+	width: 250px;
+	height: 115px;
+	padding: 10px;
+}
+#user_area.not-logged-in {
+    width: 270px;  
+    height: 40px; 
+}
+#profile_img {
+	width: 80;
+	height: 80px;
+	padding: 5px;
+}
+.profile-group {
+	display: flex;
+    flex-direction: column;
+	align-items: center;     
+    justify-content: center;
+    width: 100%;
+    padding: 5px 0;
+}
+#login_nickname {
+	font-weight: bold;
+	text-align: left;
+	margin: 5px 0px 5px;
+}
+.btn-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 5px 0;
 }
 .user_btn {
 	background-color: #14b8a6;
 	font-size: 15px;
 	color: #ffffff;
+	width: 110px;
+	height: 30px;
 	padding: 6px;
+	margin: 5px 10px;
 	border: none;
 	border-radius: 5px;
 	cursor: pointer;
@@ -84,11 +124,7 @@ header {
     height: 20px; 
     vertical-align: middle; 
     margin-right: 5px;
-}
-#login_nickname {
-	font-weight: bold;
-	text-align: left;
-	margin: 10px 0px 10px;
+	margin-bottom: 2px;
 }
 /* #43ea83 #14b8a6 */
 /* header end-point */
