--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,13 +21,19 @@
 				</form>
 			</div>
 			<!-- 사용자 계정 영역 -->
-			<div id="user_area">
+			<div id="user_area" th:classappend="${!isLoggedIn} ? 'not-logged-in' : ''">
 				<!--로그인 및 회원가입-->
-				<button type="button" id="loginLink_btn" class="user_btn" th:if="${!isLoggedIn}"><img src="/img/login.png">로그인</button>
+				<button type="button" id="loginLink_btn" class="user_btn" th:if="${!isLoggedIn}"><img src="/img/login.png">  로그인</button>
 				<button type="button" id="joinLink_btn" class="user_btn" th:if="${!isLoggedIn}"><img src="/img/join.png">회원가입</button>
 				<!--로그아웃 버튼-->
-				<p id="login_nickname" th:if="${isLoggedIn}" th:text="${#authentication.principal.nickname} + 님">Nickname님</p>
-				<button type="button" id="logoutLink_btn" class="user_btn" th:if="${isLoggedIn}"><img src="/img/logout.png">로그아웃</button>
+				<div class="profile-group" th:if="${isLoggedIn}">
+					<img id="profile_img" src="/img/profile-default.png">
+					<p id="login_nickname" th:text="${#authentication.principal.nickname} + 님">Nickname님</p>
+				</div>
+				<div class="btn-group" th:if="${isLoggedIn}">
+					<button type="button" id="mypageLink_btn" class="user_btn"><img src="/img/user.png">마이페이지</button>
+					<button type="button" id="logoutLink_btn" class="user_btn"><img src="/img/logout.png">로그아웃</button>
+				</div>
 			</div>
 	  	</header>
 	</div>
