--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -19,7 +19,7 @@ header {
 	height: 210px;
 	margin: 0 auto; 
 }
-.logo_aniplant {
+.logo-area {
 	margin: 0px;
 }
 .logo-main {
@@ -28,7 +28,7 @@ header {
 .logo-sub {
     width: 100px;
 }
-#search_area {
+.search-area {
 	border: 2px solid #14b8a6;
 	border-radius: 20px;
 	transition: box-shadow 0.3s ease;
@@ -36,7 +36,7 @@ header {
 	width: 400px;
 	height: 42px;
 }
-#search_area:hover {
+.search-area:hover {
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 #search_form {
@@ -67,7 +67,7 @@ header {
 	border: none;
 	cursor: pointer;
 }
-#user_area {
+.user-area {
 	display: flex;           
     flex-direction: row;
     align-items: center;     
@@ -142,3 +142,55 @@ header {
 }
 /* #43ea83 #14b8a6 */
 /* header end-point */
+
+/* nav start-point */
+.nav-area {
+	background-color: #14b8a6;
+}
+nav {
+	background-color: #14b8a6;
+	padding: 10px 15px;
+	width: 1024px;
+    margin: 0 auto;
+	/* height: 20px; */
+	position: relative;
+    border: 1px solid #14b8a6;
+    border-width: 1px 0 1px 0;
+}
+.list-area {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+	text-align: left;
+}
+.list-area li {
+    display: inline-block;
+	border-right: 1px solid rgba(255, 255, 255, 0.3);
+    padding: 0px 15px;
+}
+.list-area li:last-of-type {
+    border-right: none;
+}
+.list-area li a {
+    padding: 5px 10px;
+    color: #ffffff;
+	font-weight: 500;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+.list-area li a:hover {
+    text-decoration: underline;
+	background-color: rgba(255, 255, 255, 0.1);
+}
+.list-area li a.active {
+	font-weight: bold;
+    color: #084B44;
+	text-shadow: 0.7px 0.7px 0.7px rgba(0, 0, 0, 0.2); 
+}
+nav div {
+	width: 280px;
+}
+/* nav end-point */
+
+/* footer start-point */
+/* footer end-point */
