--- a/src/main/resources/templates/layout/defaultLayout.html
+++ b/src/main/resources/templates/layout/defaultLayout.html
@@ -17,6 +17,8 @@
 <body>
     <!-- header fragment 사용 -->
     <th:block th:replace="fragments/header :: headerFragment"></th:block>
+    <!-- nav fragment 사용 -->
+    <th:block th:replace="fragments/nav :: navFragment"></th:block>
     <!-- content fragment 사용 -->
     <th:block layout:fragment="content"></th:block>
     <!-- footer fragment 사용 -->
