content(container), sidebar css 조정 완료

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,6 @@
 </th:block>
 
 <!-- Content -->
-<div layout:fragment="content">
+<div layout:fragment="content" class="container">
     <h1>Content</h1>
-    <h2>메인화면입네다!!</h2>
 </div>
