--- a/src/main/resources/templates/mypage/profile.html
+++ b/src/main/resources/templates/mypage/profile.html
@@ -18,7 +18,7 @@
 </th:block>
 
 <!-- Content -->
-<div layout:fragment="content">
+<div layout:fragment="content" class="container">
     <!-- sidebar fragment 사용 -->
     <div th:replace="sidebar/mypage :: mypageSidebar"></div>
     <div class="content">마이페이지 메인 화면</div>
