--- a/src/main/resources/templates/sidebar/mypage.html
+++ b/src/main/resources/templates/sidebar/mypage.html
@@ -18,7 +18,9 @@
             <li><a href="/mypage/my-info-management.do">계정 정보 관리</a></li>
             <li><a href="/mypage/my-info-withdrawal.do">계정 탈퇴</a></li>
         </ul>
-        <a href="">문의</a>
+        <div class="contact-us">
+            <a href="">문의</a>
+        </div>
     </div>
 </body>
 </html>
