--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -79,7 +79,7 @@ header {
 	height: 115px;
 	padding: 10px;
 }
-#user_area.not-logged-in {
+.user-area.not-logged-in {
     width: 270px;  
     height: 40px; 
 }
@@ -249,3 +249,71 @@ footer {
 	color: #888;
 }
 /* footer end-point */
+
+/* content container start-point */
+.container {
+	display: flex;
+	flex-direction: row; 
+	align-items: start;
+	width: 1024px;
+	padding: 10px;
+	margin: 0 auto; 
+}
+.content {
+	margin: 15px;
+}
+/* content container end-point*/
+
+/* sidebar start-point */
+.sidebar {
+    background-color: #Dff5f3;
+    padding: 15px;
+    width: 150px; 
+    border-right: 1px solid #c1ece7;
+	border-radius: 7px;
+}
+
+.sidebar-menu, .sidebar-menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sidebar-menu > li {
+    margin-bottom: 10px;
+}
+
+.sidebar-menu a, .contact-us a {
+    text-decoration: none;
+	font-size: 14px;
+    color: #333;
+    padding: 8px 12px;
+    display: block;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.sidebar-menu a:hover, .contact-us a:hover {
+    background-color: #c1ece7;
+}
+
+.sidebar-menu li > ul {
+    display: none;
+    margin-left: 10px;
+}
+
+.sidebar-menu li:hover > ul {
+    display: block; 
+}
+
+.sidebar-menu li > ul > li > a {
+    font-size: 0.9em; 
+    padding-left: 20px; 
+}
+.contact-us {
+	border-top: 1px solid #c1ece7;
+    margin-top: 15px;
+    padding-top: 10px;
+}
+
+/* sidebar end-point */
