--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -3,50 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>애니플랜트 : 404 Not Found</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-        }
-        .error-container {
-            text-align: center;
-            background: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            font-size: 50px;
-            color: #e74c3c;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 20px;
-        }
-        
-        .logo_aniplant .link {
-        background-image: url("/img/aniplant_logo_animation.gif");
-        background-repeat: no-repeat;
-        background-size: 300px 300px;
-        background-position: center;
-        display: block;
-        width: 300px;
-        height: 300px;
-        }
-        
-        .blind {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        overflow: hidden;
-        clip: rect(0 0 0 0);
-        }
-    </style>
+    <title>페이지를 찾을 수 없습니다</title>
+    <link rel="stylesheet" th:href="@{/css/error.css}"/>
 </head>
 <body>
     <div class="error-container">
@@ -54,12 +12,14 @@
             <a href="/index.do" class="link"></a>
             <span class="blind">애니플랜트</span>
         </h1>
-        <h1>Error 404 - Not Found</h1>
-        <p>페이지를 찾을 수 없습니다.</p>
-        <p>주소를 확인해주세요.</p>
-        <div>
-            <span><a th:href="${session.previousPage}">이전 페이지로 이동</a></sapn>
-            <span><a href="/index.do">홈페이지로 이동</a></span>
+        <div class="error-message">
+            <h1>Error 404 - Not Found</h1>
+            <p class="error-message1">죄송합니다! 원하시는 페이지를 찾을 수 없습니다.</p>
+            <p class="error-message2">입력하신 주소가 정확한지 확인해 주시거나,<br> 아래의 링크를 사용하여 원하시는 페이지로 이동해보세요.</p>
+            <div class="error-link">
+                <span><a th:href="${session.previousPage}">이전 페이지로 돌아가기</a></sapn>
+                <span><a href="/index.do">홈페이지로 이동</a></span>
+            </div>
         </div>
     </div>
 </body>
