--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,45 +1,110 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background-color: #fff; /* 흰색 배경 */
-}
-
-.login-container {
-  max-width: 400px;
-  margin: 100px auto;
-  padding: 20px;
-  background-color: #fff; /* 로그인 컨테이너의 배경색 */
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-  text-align: center;
-}
-
-form {
+  font-family: 'Arial', sans-serif;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  background-color: #f9fafc;
+  margin: 100px;
+  padding: 0;
 }
 
-input {
-  padding: 8px;
-  margin-top: 5px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+.logo_aniplant .link {
+  background-image: url("/img/aniplant_logo01.png");
+  background-repeat: no-repeat;
+  background-size: 200px 100px;
+  background-position: center;
+  display: block;
+  width: 200px;
+  height: 100px;
+  margin-bottom: 20px;
 }
 
-button {
-  padding: 10px 15px;
-  margin-top: 20px;
-  background-color: #690 ; /* 로그인 버튼의 배경색 */
-  color: #fff;
+.content {
+  border: 1px solid #e0e0e0;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.07);
+  background-color: #ffffff;
+  width: 350px;
+}
+
+.btn_submit {
+  width: 100%;
+  padding: 10px;
   border: none;
-  border-radius: 5px;
+  background-color: #14b8a6;
+  font-size: 20px;
+  color: white;
+  border-radius: 4px;
   cursor: pointer;
+  transition: background-color 0.2s;
 }
 
-button:hover {
-  background-color: rgb(67, 99, 3); /* 로그인 버튼의 배경색 (마우스 오버 시) */
+.btn_submit:hover {
+  background-color: #128f89;
+}
+
+.error {
+  color: red;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.blind {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+
+.login-img {
+  width: 25px;
+  height: 25px;
+}
+
+.id-area, .password-area {
+  position: relative;
+  display: inline-block;
+}
+
+.id-area img.login-img, .password-area img.login-img {
+  position: absolute;
+  left: 10px;
+  top: 36%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+
+input[type="text"], input[type="password"] {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 300px; 
+  padding: 10px 10px 10px 40px;  /* 패딩을 한 줄로 통합 */
+  margin-bottom: 15px;
+  font-size: 16px;
+  position: relative;
+  z-index: 1;
+}
+
+input[type="text"]:focus, input[type="password"]:focus {
+  border-color: #14b8a6;
+  outline: none;
+}
+
+a {
+  text-decoration: none; /* 밑줄 제거 */
+  color: inherit; /* 글자 색상을 상속받게 설정 */
+}
+a:hover {
+  text-decoration: none; /* 호버 상태에서 밑줄 제거 */
+}
+a:visited {
+  color: inherit; /* 방문한 링크의 색상을 상속받게 설정 */
+}
+.join-link {
+  padding: 5px;
+  margin: 5px;
+  color: #7e7b7b;
 }
