--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -35,6 +35,7 @@ body {
   border: none;
   background-color: #14b8a6;
   font-size: 20px;
+  font-weight: 600;
   color: white;
   border-radius: 4px;
   cursor: pointer;
@@ -47,7 +48,7 @@ body {
 
 .error {
   color: red;
-  font-size: 12px;
+  font-size: 13px;
   margin-bottom: 10px;
 }
 
@@ -59,7 +60,7 @@ body {
   clip: rect(0 0 0 0);
 }
 
-.login-img {
+.input-img {
   width: 25px;
   height: 25px;
 }
@@ -69,7 +70,7 @@ body {
   display: inline-block;
 }
 
-.id-area img.login-img, .password-area img.login-img {
+.id-area img.input-img, .password-area img.input-img {
   position: absolute;
   left: 10px;
   top: 36%;
@@ -77,7 +78,7 @@ body {
   z-index: 2;
 }
 
-input[type="text"], input[type="password"] {
+#loginID, #loginPWD {
   border: 1px solid #ccc;
   border-radius: 4px;
   width: 300px; 
@@ -88,7 +89,7 @@ input[type="text"], input[type="password"] {
   z-index: 1;
 }
 
-input[type="text"]:focus, input[type="password"]:focus {
+#loginID:focus, #loginPWD:focus {
   border-color: #14b8a6;
   outline: none;
 }
