--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -5,28 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>애니플랜트 : 회원가입</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <style>
-    .logo_aniplant .link {
-        background-image: url("/img/aniplant_logo01.png");
-        background-repeat: no-repeat;
-        background-size: 200px 100px;
-        background-position: center;
-        display: block;
-        width: 200px;
-        height: 100px;
-    }
-    .blind {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        overflow: hidden;
-        clip: rect(0 0 0 0);
-    }
-    .error {
-        color: red;
-        font-size: 12px;
-    }
-  </style>
+  <link rel="stylesheet" th:href="@{/css/join.css}">
 </head>
 <body>
     <h1 class="logo_aniplant">
@@ -35,19 +14,56 @@
     </h1>
     <div class="content">
         <form id="join_form" name="join_form" method="post" action="">
-            <input type="text" id="idInput" name="id" placeholder="아이디"><button type="button" id="checkId" class="check_btn">중복 확인</button><span id="idError" class="error"></span><br>
-            <input type="password" id="passwordInput" name="password" placeholder="비밀번호"><span id="passwordError" class="error"></span><br>
-            <input type="password" id="passwordConfirmInput" name="password_confirm" placeholder="비밀번호 확인"><span id="passwordConfirmError" class="error"></span><span id="passwordCheckError" class="error"></span><br>
-            <input type="email" id="emailInput" name="email" placeholder="[선택] 비밀번호 분실 시 확인용 이메일"><span id="emailError" class="error"></span><br>
-            <input type="text" id="nicknameInput" name="nickname" placeholder="닉네임" maxlength="10"><button type="button" id="checkNickname" class="check_btn">중복 확인</button><span id="nicknameError" class="error"></span><br>
-            <input type="text" id="nameInput" name="name" placeholder="이름" maxlength="8"><span id="nameError" class="error"></span><br>
-            <input type="date" id="birthInput" name="birth" placeholder="생년월일 8자리" maxlength="10"><span id="birthError" class="error"></span><br>
-            <input type="tel" id="telInput" name="tel" placeholder="'-'를 포함한 휴대전화번호"><span id="telError" class="error"></span><br>
-            <ul class="gender_list">
-                <li><input type="radio" id="genderIdentity1" name="gender" value="M"><label for="genderIdentity1">남자</label></li>
-                <li><input type="radio" id="genderIdentity2" name="gender" value="F"><label for="genderIdentity2">여자</label></li>
-            </ul>
-            <span id="genderError" class="error"></span><br>
+            <div class="id-password-group"> <!-- 아이디와 비밀번호 묶는 div -->
+                <div class="input-area">
+                    <div class="input-btn-container">
+                        <input type="text" id="idInput" name="id" placeholder="아이디">
+                        <button type="button" id="checkId" class="check_btn">중복 확인</button>
+                    </div>
+                    <div id="idError" class="joinError"></div>
+                </div>
+                <div class="input-area">
+                    <input type="password" id="passwordInput" name="password" placeholder="비밀번호">
+                    <div id="passwordError" class="joinError"></div>
+                </div>
+                <div class="input-area">
+                    <input type="password" id="passwordConfirmInput" name="password_confirm" placeholder="비밀번호 확인">
+                    <div id="passwordConfirmError" class="joinError"></div>
+                    <div id="passwordCheckError" class="joinError"></div>
+                </div>
+            </div>
+            <div class="additional-inputs-group"> <!-- 나머지 input들 묶는 div -->
+                <div class="input-area">
+                    <input type="email" id="emailInput" name="email" placeholder="[선택] 비밀번호 분실 시 확인용 이메일">
+                    <div id="emailError" class="joinError"></div>
+                </div>
+                <div class="input-area">
+                    <div class="input-btn-container">
+                        <input type="text" id="nicknameInput" name="nickname" placeholder="닉네임" maxlength="10">
+                        <button type="button" id="checkNickname" class="check_btn">중복 확인</button>
+                    </div>
+                    <div id="nicknameError" class="joinError"></div>
+                </div>
+                <div class="input-area">
+                    <input type="text" id="nameInput" name="name" placeholder="이름" maxlength="8">
+                    <div id="nameError" class="joinError"></div>
+                </div>
+                <div class="input-area">
+                    <input type="date" id="birthInput" name="birth" placeholder="생년월일 8자리" maxlength="10">
+                    <div id="birthError" class="joinError"></div>
+                </div>
+                <div class="input-area">
+                    <input type="tel" id="telInput" name="tel" placeholder="'-'를 포함한 휴대전화번호">
+                    <div id="telError" class="joinError"></div>
+                </div>
+                <div class="input-area">
+                    <ul class="gender_list">
+                        <li><input type="radio" id="genderIdentity1" name="gender" value="M"><label for="genderIdentity1">남자</label></li>
+                        <li><input type="radio" id="genderIdentity2" name="gender" value="F"><label for="genderIdentity2">여자</label></li>
+                    </ul>
+                    <div id="genderError" class="joinError"></div>
+                </div>
+            </div>
             <button type="button" id="join_btn" class="btn_submit">회원가입</button>
         </form>
     </div>
